lib/mpv_bindings.dart


  /// Signal to all async requests with the matching ID to abort. This affects
  /// the following API calls:
  ///
  /// mpv_command_async
  /// mpv_command_node_async
  ///
  /// All of these functions take a reply_userdata parameter. This API function
  /// tells all requests with the matching reply_userdata value to try to return
  /// as soon as possible. If there are multiple requests with matching ID, it
  /// aborts all of them.
  ///
  /// This API function is mostly asynchronous itself. It will not wait until the
  /// command is aborted. Instead, the command will terminate as usual, but with
  /// some work not done. How this is signaled depends on the specific command (for
  /// example, the "subprocess" command will indicate it by "killed_by_us" set to
  /// true in the result). How long it takes also depends on the situation. The
  /// aborting process is completely asynchronous.
  ///
  /// Not all commands may support this functionality. In this case, this function
  /// will have no effect. The same is true if the request using the passed
  /// reply_userdata has already terminated, has not been started yet, or was
  /// never in use at all.
  ///
  /// You have to be careful of race conditions: the time during which the abort
  /// request will be effective is _after_ e.g. mpv_command_async() has returned,
  /// and before the command has signaled completion with MPV_EVENT_COMMAND_REPLY.
  ///
  /// @param reply_userdata ID of the request to be aborted (see above)
  void mpv_abort_async_command(
    ffi.Pointer<mpv_handle> ctx,
    int reply_userdata,
  ) {
    return _mpv_abort_async_command(
      ctx,
      reply_userdata,
    );
  }

  late final _mpv_abort_async_commandPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<mpv_handle>, ffi.Int)>>('mpv_abort_async_command');
  late final _mpv_abort_async_command = _mpv_abort_async_commandPtr
      .asFunction<void Function(ffi.Pointer<mpv_handle>, int)>();

  /// Set a property to a given value. Properties are essentially variables which
  /// can be queried or set at runtime. For example, writing to the pause property
  /// will actually pause or unpause playback.
  ///
  /// If the format doesn't match with the internal format of the property, access
  /// usually will fail with MPV_ERROR_PROPERTY_FORMAT. In some cases, the data
  /// is automatically converted and access succeeds. For example, MPV_FORMAT_INT64
  /// is always converted to MPV_FORMAT_DOUBLE, and access using MPV_FORMAT_STRING
  /// usually invokes a string parser. The same happens when calling this function
  /// with MPV_FORMAT_NODE: the underlying format may be converted to another
  /// type if possible.
  ///
  /// Using a format other than MPV_FORMAT_NODE is equivalent to constructing a
  /// mpv_node with the given format and data, and passing the mpv_node to this
  /// function. (Before API version 1.21, this was different.)
  ///
  /// Note: starting with mpv 0.21.0 (client API version 1.23), this can be used to
  /// set options in general. It even can be used before mpv_initialize()
  /// has been called. If called before mpv_initialize(), setting properties
  /// not backed by options will result in MPV_ERROR_PROPERTY_UNAVAILABLE.
  /// In some cases, properties and options still conflict. In these cases,
  /// mpv_set_property() accesses the options before mpv_initialize(), and
  /// the properties after mpv_initialize(). These conflicts will be removed
  /// in mpv 0.23.0. See mpv_set_option() for further remarks.
  ///
  /// @param name The property name. See input.rst for a list of properties.
  /// @param format see enum mpv_format.
  /// @param[in] data Option value.
  /// @return error code
  int mpv_set_property(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
    int format,
    ffi.Pointer<ffi.Void> data,
  ) {
    return _mpv_set_property(
      ctx,
      name,
      format,
      data,
    );
  }

  late final _mpv_set_propertyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>,
              ffi.Int32, ffi.Pointer<ffi.Void>)>>('mpv_set_property');
  late final _mpv_set_property = _mpv_set_propertyPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Void>)>();

  /// Convenience function to set a property to a string value.
  ///
  /// This is like calling mpv_set_property() with MPV_FORMAT_STRING.
  int mpv_set_property_string(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
    ffi.Pointer<ffi.Char> data,
  ) {
    return _mpv_set_property_string(
      ctx,
      name,
      data,
    );
  }

  late final _mpv_set_property_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('mpv_set_property_string');
  late final _mpv_set_property_string = _mpv_set_property_stringPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>)>();

  /// Set a property asynchronously. You will receive the result of the operation
  /// as MPV_EVENT_SET_PROPERTY_REPLY event. The mpv_event.error field will contain
  /// the result status of the operation. Otherwise, this function is similar to
  /// mpv_set_property().
  ///
  /// Safe to be called from mpv render API threads.
  ///
  /// @param reply_userdata see section about asynchronous calls
  /// @param name The property name.
  /// @param format see enum mpv_format.
  /// @param[in] data Option value. The value will be copied by the function. It
  /// will never be modified by the client API.
  /// @return error code if sending the request failed
  int mpv_set_property_async(
    ffi.Pointer<mpv_handle> ctx,
    int reply_userdata,
    ffi.Pointer<ffi.Char> name,
    int format,
    ffi.Pointer<ffi.Void> data,
  ) {
    return _mpv_set_property_async(
      ctx,
      reply_userdata,
      name,
      format,
      data,
    );
  }

  late final _mpv_set_property_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<mpv_handle>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int32,
              ffi.Pointer<ffi.Void>)>>('mpv_set_property_async');
  late final _mpv_set_property_async = _mpv_set_property_asyncPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, int, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Void>)>();

  /// Read the value of the given property.
  ///
  /// If the format doesn't match with the internal format of the property, access
  /// usually will fail with MPV_ERROR_PROPERTY_FORMAT. In some cases, the data
  /// is automatically converted and access succeeds. For example, MPV_FORMAT_INT64
  /// is always converted to MPV_FORMAT_DOUBLE, and access using MPV_FORMAT_STRING
  /// usually invokes a string formatter.
  ///
  /// @param name The property name.
  /// @param format see enum mpv_format.
  /// @param[out] data Pointer to the variable holding the option value. On
  /// success, the variable will be set to a copy of the option
  /// value. For formats that require dynamic memory allocation,
  /// you can free the value with mpv_free() (strings) or
  /// mpv_free_node_contents() (MPV_FORMAT_NODE).
  /// @return error code
  int mpv_get_property(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
    int format,
    ffi.Pointer<ffi.Void> data,
  ) {
    return _mpv_get_property(
      ctx,
      name,
      format,
      data,
    );
  }

  late final _mpv_get_propertyPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>,
              ffi.Int32, ffi.Pointer<ffi.Void>)>>('mpv_get_property');
  late final _mpv_get_property = _mpv_get_propertyPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>, int,
          ffi.Pointer<ffi.Void>)>();

  /// Return the value of the property with the given name as string. This is
  /// equivalent to mpv_get_property() with MPV_FORMAT_STRING.
  ///
  /// See MPV_FORMAT_STRING for character encoding issues.
  ///
  /// On error, NULL is returned. Use mpv_get_property() if you want fine-grained
  /// error reporting.
  ///
  /// @param name The property name.
  /// @return Property value, or NULL if the property can't be retrieved. Free
  /// the string with mpv_free().
  ffi.Pointer<ffi.Char> mpv_get_property_string(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _mpv_get_property_string(
      ctx,
      name,
    );
  }

  late final _mpv_get_property_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Char>)>>('mpv_get_property_string');
  late final _mpv_get_property_string = _mpv_get_property_stringPtr.asFunction<
      ffi.Pointer<ffi.Char> Function(
          ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>)>();

  /// Return the property as "OSD" formatted string. This is the same as
  /// mpv_get_property_string, but using MPV_FORMAT_OSD_STRING.
  ///
  /// @return Property value, or NULL if the property can't be retrieved. Free
  /// the string with mpv_free().
  ffi.Pointer<ffi.Char> mpv_get_property_osd_string(
    ffi.Pointer<mpv_handle> ctx,
    ffi.Pointer<ffi.Char> name,
  ) {
    return _mpv_get_property_osd_string(
      ctx,
      name,
    );
  }

  late final _mpv_get_property_osd_stringPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<mpv_handle>,
              ffi.Pointer<ffi.Char>)>>('mpv_get_property_osd_string');
  late final _mpv_get_property_osd_string =
      _mpv_get_property_osd_stringPtr.asFunction<
          ffi.Pointer<ffi.Char> Function(
              ffi.Pointer<mpv_handle>, ffi.Pointer<ffi.Char>)>();

  /// Get a property asynchronously. You will receive the result of the operation
  /// as well as the property data with the MPV_EVENT_GET_PROPERTY_REPLY event.
  /// You should check the mpv_event.error field on the reply event.
  ///
  /// Safe to be called from mpv render API threads.
  ///
  /// @param reply_userdata see section about asynchronous calls
  /// @param name The property name.
  /// @param format see enum mpv_format.
  /// @return error code if sending the request failed
  int mpv_get_property_async(
    ffi.Pointer<mpv_handle> ctx,
    int reply_userdata,
    ffi.Pointer<ffi.Char> name,
    int format,
  ) {
    return _mpv_get_property_async(
      ctx,
      reply_userdata,
      name,
      format,
    );
  }

  late final _mpv_get_property_asyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<mpv_handle>, ffi.Int,
              ffi.Pointer<ffi.Char>, ffi.Int32)>>('mpv_get_property_async');
  late final _mpv_get_property_async = _mpv_get_property_asyncPtr.asFunction<
      int Function(ffi.Pointer<mpv_handle>, int, ffi.Pointer<ffi.Char>, int)>();
